--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
     "cSpell.enabled": false,
-    "cSpell.words": []
+    "cSpell.words": [],
+    "files.exclude": {},
+    "workspace.isHidden": false
 }
